--- a/src/components/FriendList/FriendListItem.css
+++ b/src/components/FriendList/FriendListItem.css
@@ -1,21 +1,33 @@
 .item {
-  display: flex;
-  flex-direction: row;
-  margin-top: 10px;
-  padding: 1px 100px;
-  margin-bottom: 10px;
-  border-radius: 8px;
-  background-color: #f3f3f3;
-}
-
-.avatar {
-  margin-right: 15px;
-  border-radius: 20%;
-  border: 2px solid #ccc;
-}
-
-.name {
-
-  font-size: 30px;
-  color: #333;
-}
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    background-color: #f3f3f3;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  .status {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 15px;
+    background-color: #ccc; 
+  }
+  
+  .avatar {
+    border-radius: 20%;
+    border: 2px solid #ccc;
+    margin-right: auto; 
+  }
+  
+  .name {
+    font-size: 30px;
+    color: #333;
+    margin-right: auto; 
+  }
+  
